# wasm-version-patcher

./: Cargo.toml  README.md  version.ron
src/: main.rs
